--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.21",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cheerio": "^1.1.2",
